--- a/rust/proj/import-tunes/.vscode/tasks.json
+++ b/rust/proj/import-tunes/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "command": "echo",
     "isShellCommand": true,
-    "args": ["Hello World"],
+    "args": [],
     "showOutput": "always",
     "tasks": [
         {
